--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.4 1997/08/20 21:05:02 mj Exp $
+#    $Id: Makefile,v 4.5 1998/01/24 14:07:23 mj Exp $
 #
 #    Makefile for FIDOGATE src/
 #
@@ -19,6 +19,13 @@ include $(TOPDIR)/rules.make
 SUBDIRS		= include common ffx gate tick toss util
 
 
+all::		config.pl
+
+config.pl:	config.plt $(TOPDIR)/config.make
+	$(PERL) $(TOPDIR)/subst.pl -c$(TOPDIR)/config.make -p $< >$*.pl
+
+
+
 all clean veryclean depend install check::
 	for d in $(SUBDIRS); do $(MAKE) -C $$d $@ || exit 1; done 
 
@@ -26,3 +33,6 @@ clean::
 	rm -f *~ *.bak *.o tags TAGS core paths.tmp
 
 check::
+
+tags:
+	etags */*.[hcy] */*.pl */*.sh
