--- a/test/cf/toss.conf
+++ b/test/cf/toss.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: toss.conf,v 4.2 1998/01/18 15:33:18 mj Exp $
+# $Id: toss.conf,v 4.3 1998/01/24 14:07:40 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -24,13 +24,13 @@ Address		242:1000/5
 #
 # AREAS.BBS EchoMail distribution list
 #
-AreasBBS	%V/areas.bbs
+AreasBBS	../cf/areas.bbs
 
 
 #
 # FAREAS.BBS file distribution list
 #
-FAreasBBS	%V/fareas.bbs
+FAreasBBS	../cf/fareas.bbs
 
 
 #
