--- a/test/cf/toss.conf
+++ b/test/cf/toss.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: toss.conf,v 4.3 1998/01/24 14:07:40 mj Exp $
+# $Id: toss.conf,v 4.4 1998/02/19 16:15:51 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -34,9 +34,16 @@ FAreasBBS	../cf/fareas.bbs
 
 
 #
-# ftnaf: CC of reply mails
+# Areafix
 #
-CCMail		postmaster@orodruin.fido.de
+# Mailer program (must behave like sendmail -t)
+#
+AreafixMailer	/usr/sbin/sendmail -t
+
+#
+# CC of reply mails
+#
+AreafixCC	postmaster@orodruin.fido.de
 
 
 #
