--- a/examples/orodruin/ffx.conf
+++ b/examples/orodruin/ffx.conf
@@ -1,6 +1,5 @@
-#:ts=8
 #
-# $Id: config.ffx,v 4.5 1997/07/08 18:39:22 mj Exp $
+# $Id: ffx.conf,v 4.1 1998/02/22 15:09:32 mj Exp $
 #
 # FIDOGATE config file ffx programs
 #
@@ -13,7 +12,7 @@
 #
 # Include common stuff (%L = LIBDIR)
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
