--- a/examples/orodruin/ftp.conf
+++ b/examples/orodruin/ftp.conf
@@ -1,6 +1,5 @@
-#:ts=8
 #
-# $Id: config.ftp,v 4.1 1996/08/25 10:16:04 mj Exp $
+# $Id: ftp.conf,v 4.1 1998/02/22 15:09:33 mj Exp $
 #
 # FIDOGATE config file FTP hub
 #
@@ -13,7 +12,7 @@
 #
 # Include common stuff (%L = LIBDIR)
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
