--- a/examples/orodruin/gate.conf
+++ b/examples/orodruin/gate.conf
@@ -1,6 +1,5 @@
-#:ts=8
 #
-# $Id: config.gate,v 4.22 1997/11/09 12:05:10 mj Exp $
+# $Id: gate.conf,v 4.1 1998/02/22 15:09:33 mj Exp $
 #
 # FIDOGATE config file gateway programs
 #
@@ -13,7 +12,7 @@
 #
 # Include common stuff (%L = LIBDIR)
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
