--- a/examples/orodruin/toss.conf
+++ b/examples/orodruin/toss.conf
@@ -1,6 +1,5 @@
-#:ts=8
 #
-# $Id: config.main,v 4.13 1997/11/23 18:51:43 mj Exp $
+# $Id: toss.conf,v 4.1 1998/02/22 15:09:34 mj Exp $
 #
 # FIDOGATE config file main AKA
 #
@@ -13,7 +12,7 @@
 #
 # Include common stuff (%L = LIBDIR)
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
@@ -26,19 +25,26 @@ Address		242:1000/5
 #
 # AREAS.BBS EchoMail distribution list
 #
-AreasBBS	%L/areas.bbs
+AreasBBS	%V/areas.bbs
 
 
 #
 # FAREAS.BBS file distribution list
 #
-FAreasBBS	%L/fareas.bbs
+FAreasBBS	%V/fareas.bbs
 
 
 #
-# ftnaf: CC of reply mails
+# Areafix
 #
-CCMail		postmaster@orodruin.fido.de
+# Mailer program (must behave like sendmail -t)
+#
+AreafixMailer	/usr/sbin/sendmail -t
+
+#
+# CC of reply mails
+#
+#AreafixCC	postmaster@orodruin.fido.de
 
 
 #
@@ -98,7 +104,7 @@ MaxHistory 28
 #
 # Kill old messages (date < now - MaxHistory) (= treat as dupe)
 #
-#KillOld
+KillOld
 
 #
 # Kill dupe messages
