--- a/examples/orodruin/toss.conf
+++ b/examples/orodruin/toss.conf
@@ -1,5 +1,5 @@
 #
-# $Id: toss.conf,v 4.1 1998/02/22 15:09:34 mj Exp $
+# $Id: toss.conf,v 4.2 1998/03/07 16:53:27 mj Exp $
 #
 # FIDOGATE config file main AKA
 #
@@ -185,6 +185,21 @@ MaxOpenFiles	40
 MaxArc		2048
 
 #
-# Minimum free disk space for runtoss (KByte)
+# runtoss:
 #
-MinDiskFree	10240
+# Minimum free disk space (KByte)
+#
+DiskFreeMin	10240
+
+#
+# Disk free method
+#
+# Run DiskFreeProg
+DiskFreeMethod	prog
+# Always enough free disk space (use for WIN32)
+#DiskFreeMethod	none
+
+#
+# Disk free program, %p is replace with path name
+#
+DiskFreeProg	df -P %p
