--- a/test/cf/common.conf
+++ b/test/cf/common.conf
@@ -11,8 +11,8 @@
 
 # directories
 CONFIGDIR	../cf
-LIBDIR		../cf
-BINDIR		.
+LIBDIR		../lib
+BINDIR		../lib
 LOGDIR		.
 VARDIR		.
 LOCKDIR		./locks
