--- a/test/cf/toss.conf
+++ b/test/cf/toss.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: toss.conf,v 4.4 1998/02/19 16:15:51 mj Exp $
+# $Id: toss.conf,v 4.5 1998/03/07 16:53:33 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -165,3 +165,25 @@ MaxOpenFiles	40
 # Maximum size of ArcMail archives (KByte)
 #
 MaxArc		2048
+
+
+#
+# runtoss:
+#
+# Minimum free disk space (KByte)
+#
+DiskFreeMin	10240
+#DiskFreeMin	10240000
+
+#
+# Disk free method
+#
+# Run DiskFreeProg
+DiskFreeMethod	prog
+# Always enough free disk space (use for WIN32)
+#DiskFreeMethod	none
+
+#
+# Disk free program, %p is replace with path name
+#
+DiskFreeProg	df -P %p
