--- a/examples/orodruin/toss.conf
+++ b/examples/orodruin/toss.conf
@@ -1,5 +1,5 @@
 #
-# $Id: toss.conf,v 4.2 1998/03/07 16:53:27 mj Exp $
+# $Id: toss.conf,v 4.3 1998/03/08 21:07:33 mj Exp $
 #
 # FIDOGATE config file main AKA
 #
@@ -39,12 +39,17 @@ FAreasBBS	%V/fareas.bbs
 #
 # Mailer program (must behave like sendmail -t)
 #
-AreafixMailer	/usr/sbin/sendmail -t
+AreaFixMailer	/usr/sbin/sendmail -t
 
 #
 # CC of reply mails
 #
-#AreafixCC	postmaster@orodruin.fido.de
+#AreaFixCc	postmaster@orodruin.fido.de
+
+#
+# Location of help file
+#
+AreaFixHelp	%L/areafix.help
 
 
 #
