--- a/test/cf/toss.conf
+++ b/test/cf/toss.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: toss.conf,v 4.5 1998/03/07 16:53:33 mj Exp $
+# $Id: toss.conf,v 4.6 1998/03/08 21:07:39 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -44,6 +44,11 @@ AreafixMailer	/usr/sbin/sendmail -t
 # CC of reply mails
 #
 AreafixCC	postmaster@orodruin.fido.de
+
+#
+# Location of help file
+#
+AreaFixHelp	../../src/areafix/areafix.help
 
 
 #
