--- a/examples/orodruin/common.conf
+++ b/examples/orodruin/common.conf
@@ -1,5 +1,5 @@
 #
-# $Id: common.conf,v 4.1 1998/02/22 15:09:31 mj Exp $
+# $Id: common.conf,v 4.2 1998/04/03 20:15:32 mj Exp $
 #
 # FIDOGATE config file common stuff,
 # included by config.gate, config.main, config.ffx
@@ -76,3 +76,15 @@ Zone	242	.Fido.DE		FidoDE		out.0f2
 #DosDrive	I:	/var/spool
 #DosDrive	P:	/u1
 #DosDrive	Q:	/u2
+
+
+#
+# AREAS.BBS EchoMail distribution list
+#
+AreasBBS	%V/areas.bbs
+
+
+#
+# FAREAS.BBS file distribution list
+#
+FAreasBBS	%V/fareas.bbs
