--- a/examples/orodruin/gate.conf
+++ b/examples/orodruin/gate.conf
@@ -1,5 +1,5 @@
 #
-# $Id: gate.conf,v 4.1 1998/02/22 15:09:33 mj Exp $
+# $Id: gate.conf,v 4.2 1998/04/03 20:15:32 mj Exp $
 #
 # FIDOGATE config file gateway programs
 #
@@ -287,3 +287,11 @@ RFCAddrMode <>
 # to be compatible with ifmail-TX
 #
 #ReplyAddrIfmailTX
+
+
+
+#
+# Check areas.bbs when gating newsgroups, messages for areas without
+# downlinks in areas.bbs will be skipped.
+#
+#CheckAreasBBS
