--- a/test/cf/common.conf
+++ b/test/cf/common.conf
@@ -82,3 +82,15 @@ Zone		152	.oopsnet.de	oopsnet		-
 #DosDrive	I:	/usr/spool
 #DosDrive	P:	/u1
 #DosDrive	Q:	/u2
+
+
+#
+# AREAS.BBS EchoMail distribution list
+#
+AreasBBS	../cf/areas.bbs
+
+
+#
+# FAREAS.BBS file distribution list
+#
+FAreasBBS	../cf/fareas.bbs
