--- a/examples/orodruin/common.conf
+++ b/examples/orodruin/common.conf
@@ -1,5 +1,5 @@
 #
-# $Id: common.conf,v 4.2 1998/04/03 20:15:32 mj Exp $
+# $Id: common.conf,v 4.3 1998/04/28 19:02:24 mj Exp $
 #
 # FIDOGATE config file common stuff,
 # included by config.gate, config.main, config.ffx
@@ -34,7 +34,8 @@ PACKING		%C/packing
 ROUTING		%C/routing
 HISTORY		%V/history
 LOGFILE		%G/log
-
+# facility when using syslog support (LOGFILE = "syslog")
+LogFacility	local0
 
 #
 # Internet address
