--- a/examples/orodruin/common.conf
+++ b/examples/orodruin/common.conf
@@ -1,5 +1,5 @@
 #
-# $Id: common.conf,v 4.3 1998/04/28 19:02:24 mj Exp $
+# $Id: common.conf,v 4.4 1998/05/01 15:16:42 mj Exp $
 #
 # FIDOGATE config file common stuff,
 # included by config.gate, config.main, config.ffx
@@ -34,8 +34,12 @@ PACKING		%C/packing
 ROUTING		%C/routing
 HISTORY		%V/history
 LOGFILE		%G/log
-# facility when using syslog support (LOGFILE = "syslog")
+CHARSETMAP	%L/charset.bin
+
+# facility, level when using syslog support (LOGFILE = "syslog")
 LogFacility	local0
+LogLevel	notice
+
 
 #
 # Internet address
