--- a/examples/orodruin/gate.conf
+++ b/examples/orodruin/gate.conf
@@ -1,5 +1,5 @@
 #
-# $Id: gate.conf,v 4.2 1998/04/03 20:15:32 mj Exp $
+# $Id: gate.conf,v 4.3 1998/05/01 15:16:42 mj Exp $
 #
 # FIDOGATE config file gateway programs
 #
@@ -295,3 +295,22 @@ RFCAddrMode <>
 # downlinks in areas.bbs will be skipped.
 #
 #CheckAreasBBS
+
+
+#
+# Charset mapping
+#
+# Format	default:ftn:rfc
+#		            ^^^ charset in RFC message, when gating FTN->RFC
+#		        ^^^---- charset in FTN message, when gating RFC->FTN
+#		^^^^^^^-------- charset assumed for FTN message, if no
+#				^ACHRS kludge is present
+#
+# Default charset mapping, if NetMailCharset or -C is not set
+#
+DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
+
+#
+# Charset mapping for NetMail
+#
+NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
