--- a/test/cf/common.conf
+++ b/test/cf/common.conf
@@ -40,6 +40,11 @@ PACKING		%C/packing
 ROUTING		%C/routing
 HISTORY		%V/history
 LOGFILE		%G/log
+CHARSETMAP	%L/charset.bin
+
+# facility, level when using syslog support (LOGFILE = "syslog")
+LogFacility	local0
+LogLevel	notice
 
 
 #
