--- a/test/cf/gate.conf
+++ b/test/cf/gate.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: gate.conf,v 4.2 1998/01/18 15:33:18 mj Exp $
+# $Id: gate.conf,v 4.3 1998/05/01 15:16:48 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -270,3 +270,22 @@ RFCAddrMode <>
 # to be compatible with ifmail-TX
 #
 ReplyAddrIfmailTX
+
+
+#
+# Charset mapping
+#
+# Format	default:ftn:rfc
+#		            ^^^ charset in RFC message, when gating FTN->RFC
+#		        ^^^---- charset in FTN message, when gating RFC->FTN
+#		^^^^^^^-------- charset assumed for FTN message, if no
+#				^ACHRS kludge is present
+#
+# Default charset mapping, if NetMailCharset or -C is not set
+#
+DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
+
+#
+# Charset mapping for NetMail
+#
+NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
