--- a/src/charset/Makefile
+++ b/src/charset/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 1.2 1998/05/01 15:16:43 mj Exp $
+#    $Id: Makefile,v 1.3 1998/05/03 12:46:29 mj Exp $
 #
 #    Makefile for FIDOGATE src/charset/
 #
@@ -16,34 +16,44 @@ include $(TOPDIR)/config.make
 include $(TOPDIR)/rules.make
 
 
+LIBA		= $(TOPDIR)/src/common/$(LIB)
+
+OBJS		= charset.o
+
 PROGS		= charsetc
 
-OBJS_CHARSETC	= charsetc.o new.o
+OBJS_CHARSETC	= charsetc.o charset.o
 
 LOCAL_CFLAGS	=
 LOCAL_LFLAGS	=
 
-TESTS		=
+LIBOBJS		= $(OBJS:%=$(LIBA)(%))
+
+TESTS		= testcharset
+
+CHARSETMAP	= charset.bin
+CHARSETSRC	= charset.map
 
 
-all:		$(PROGS)
+all:		$(LIBA) $(PROGS) $(CHARSETMAP)
 
-charsetc:	$(TOPDIR)/src/common/$(LIB) $(OBJS_CHARSETC)
+$(LIBA):	$(LIBOBJS)
+	$(RANLIB) $(LIBA)
+
+charsetc:	$(LIBA) $(OBJS_CHARSETC)
 	$(CC) $(LFLAGS) $(LOCAL_LFLAGS) -o charsetc $(OBJS_CHARSETC) $(LIBS)
 
 
-testcharset:	testcharset.o $(TOPDIR)/src/common/$(LIB)
-	$(CC) $(LFLAGS) -o testcharset testcharset.o $(LIBS)
-testcharset.o:	new.c
-	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -DTEST -c new.c -o testcharset.o
-
+$(CHARSETMAP):	$(CHARSETSRC)
+	./charsetc -v $(CHARSETSRC) $(CHARSETMAP)
 
 
 install:
+	$(INSTALL_DATA) $(CHARSETMAP) $(PREFIX)$(LIBDIR)
 
 
 clean veryclean:
-	rm -f $(PROGS)
+	rm -f $(PROGS) $(TESTS) $(CHARSETMAP)
 	rm -f *~ *.bak *.o tags TAGS core paths.tmp
 
 
@@ -52,6 +62,10 @@ clean veryclean:
 #
 check:		$(TESTS)
 
+testcharset:	testcharset.o $(TOPDIR)/src/common/$(LIB)
+	$(CC) $(LFLAGS) -o testcharset testcharset.o $(LIBS)
+testcharset.o:	charset.c
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -DTEST -c charset.c -o testcharset.o
 
 
 #
