--- a/scripts/misc/Makefile
+++ b/scripts/misc/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.1 1996/12/29 12:16:38 mj Exp $
+#    $Id: Makefile,v 4.2 1998/05/23 19:23:29 mj Exp $
 #
 #    Makefile for FIDOGATE scripts/filebase/
 #
@@ -16,14 +16,25 @@ include $(TOPDIR)/config.make
 include $(TOPDIR)/rules.make
 
 
-PROGS		= afmail areamgr recvuu senduu senduumail
+PROGS		= afmail areasbbssync areamgr recvuu senduu senduumail
 
 
 all:		$(PROGS)
 
 
+SUBSTCMD	= $(PERL) $(TOPDIR)/subst.pl -t$(TOPDIR) \
+		  -c$(TOPDIR)/examples/morannon/config.make.morannon -p
+
+morannon:
+	$(SUBSTCMD) areasbbssync.pl >areasbbssync
+	chmod +x areasbbssync
+
 
 install:
+	$(INSTALL_PROG) areasbbssync $(PREFIX)$(BINDIR)
+	$(INSTALL_PROG) recvuu $(PREFIX)$(BINDIR)
+	$(INSTALL_PROG) senduu $(PREFIX)$(BINDIR)
+	$(INSTALL_PROG) senduumail $(PREFIX)$(BINDIR)
 
 
 clean:
