--- a/test/cf/gate.conf
+++ b/test/cf/gate.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: gate.conf,v 4.3 1998/05/01 15:16:48 mj Exp $
+# $Id: gate.conf,v 4.4 1998/10/18 16:31:38 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -289,3 +289,13 @@ DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
 # Charset mapping for NetMail
 #
 NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
+
+
+#
+# The STRING which FIDOGATE's ftn2rfc adds to the
+# Path header, normally "not-for-mail". If gated
+# messages are not generally exported to the Usenet,
+# setting it to "fidogate!not-for-mail" makes
+# the INN newsfeeds entry easier and less error-prone.
+#
+NewsPathTail	"fidogate!not-for-mail"
