--- a/examples/morannon/ffx.conf
+++ b/examples/morannon/ffx.conf
@@ -2,7 +2,7 @@
 #
 # FIDOGATE config file ffx programs
 #
-# Fido.DE domain gateway
+# morannon.Fido.DE
 #
 # Format:  keyword arg ...
 #          keyword and args may be put in double quotes "..."
@@ -11,7 +11,7 @@
 #
 # Include common stuff (%L = LIBDIR)
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
