--- a/examples/morannon/gate.conf
+++ b/examples/morannon/gate.conf
@@ -2,7 +2,7 @@
 #
 # FIDOGATE config file gateway programs
 #
-# Fido.DE domain gateway
+# morannon.Fido.DE
 #
 # Format:  keyword arg ...
 #          keyword and args may be put in double quotes "..."
@@ -11,7 +11,7 @@
 #
 # Include common stuff (%L = LIBDIR)
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
@@ -37,7 +37,7 @@ Origin		"Fido.DE domain gateway"
 #
 # Organization header for News
 #
-Organization	"Fido.DE domain gateway (IN e.V.)"
+Organization	"Fido.DE domain gateway (Moving Bits e.V. / IN e.V.)"
 
 
 #
@@ -130,13 +130,14 @@ X-FTN		ftTOVDSP
 #
 # Maximum size of FTN messages (default value) for splitting
 #
-MaxMsgSize		15000
-#MaxMsgSize		32000
+#MaxMsgSize		15000
+MaxMsgSize		31000
 
 #
 # Limit message size for gateway, bigger messages will be bounced/not gated
 #
-LimitMsgSize		256000
+#LimitMsgSize		512000
+LimitMsgSize		2048000
 
 
 #
@@ -236,7 +237,7 @@ RFCLevel		1
 #
 #    %s is replaced with the envelope sender
 #
-FTNInSendmail	/usr/sbin/sendmail -odq -oee -oi -f%s -pFIDOGATE:morannon-ftn.fido.de -t
+FTNInSendmail	/usr/sbin/sendmail -oee -oi -f%s -pFIDOGATE:morannon-ftn.fido.de -t
 
 #
 # rnews program path
@@ -279,10 +280,48 @@ DontUseReplyTo
 #    (), p, 0   -    user@do.main (Real Name)
 #    <>, a, 1   -    Real Name <user@do.main>
 #
-RFCAddrMode <>
+RFCAddrMode ()
 
 #
 # Force ^AREPLYADDR to only contain ^AREPLYADDR <user@do.main>
 # to be compatible with ifmail-TX
 #
 #ReplyAddrIfmailTX
+
+
+
+#
+# Check areas.bbs when gating newsgroups, messages for areas without
+# downlinks in areas.bbs will be skipped.
+#
+CheckAreasBBS
+
+
+#
+# Charset mapping
+#
+# Format	default:ftn:rfc
+#		            ^^^ charset in RFC message, when gating FTN->RFC
+#		        ^^^---- charset in FTN message, when gating RFC->FTN
+#		^^^^^^^-------- charset assumed for FTN message, if no
+#				^ACHRS kludge is present
+#
+# Default charset mapping, if NetMailCharset or -C is not set
+#
+DefaultCharset	x-ibmpc:iso-8859-1:iso-8859-1
+
+#
+# Charset mapping for NetMail
+#
+NetMailCharset	x-ibmpc:iso-8859-1:iso-8859-1
+
+
+#
+# The STRING which FIDOGATE's ftn2rfc adds to the
+# Path header, normally "not-for-mail". If gated
+# messages are not generally exported to the Usenet,
+# setting it to "fidogate!not-for-mail" makes
+# the INN newsfeeds entry easier and less error-prone.
+#
+#NewsPathTail	"fidogate!not-for-mail"
+NewsPathTail	"not-for-mail"
