--- a/examples/morannon/toss.conf
+++ b/examples/morannon/toss.conf
@@ -2,7 +2,7 @@
 #
 # FIDOGATE config file main AKA
 #
-# Fido.DE domain gateway
+# morannon.Fido.DE
 #
 # Format:  keyword arg ...
 #          keyword and args may be put in double quotes "..."
@@ -11,7 +11,7 @@
 #
 # Include common stuff (%L = LIBDIR)
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
@@ -30,16 +30,6 @@ Address		49:305/1.200
 
 Address		124:1249/9999
 
-#
-# AREAS.BBS EchoMail distribution list
-#
-AreasBBS	%L/areas.bbs
-
-
-#
-# FAREAS.BBS file distribution list
-#
-FAreasBBS	%L/fareas.bbs
 
 
 #
@@ -173,7 +163,7 @@ UnknownTickArea UNKNOWN
 # Maximum number of messages to toss before closing output packets/
 # exiting ftntoss.
 #
-MaxMsg		500
+MaxMsg		2000
 
 #
 # Maximum number of concurrently open files (OS dependent)
@@ -189,3 +179,14 @@ MaxArc		3000
 # Minimum free disk space for runtoss (KByte)
 #
 MinDiskFree	32000
+
+#
+# Disk free method
+#
+# Run DiskFreeProg
+DiskFreeMethod	prog
+
+#
+# Disk free program, %p is replaced with path name
+#
+DiskFreeProg	df -P %p
