--- a/examples/orodruin/toss.conf
+++ b/examples/orodruin/toss.conf
@@ -1,5 +1,5 @@
 #
-# $Id: toss.conf,v 4.4 1998/04/03 20:15:33 mj Exp $
+# $Id: toss.conf,v 4.5 1999/01/09 17:39:39 mj Exp $
 #
 # FIDOGATE config file main AKA
 #
@@ -132,7 +132,7 @@ KillOld
 # Use 4D echomail control lines, i.e. SEEN-BY / PATH includes point
 # addresses
 #
-#EchoMail4D
+#TossEchoMail4D
 
 #
 # Do not output an empty PATH line
