--- a/scripts/run/Makefile
+++ b/scripts/run/Makefile
@@ -1,8 +1,8 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.4 1998/01/28 22:00:13 mj Exp $
+#    $Id: Makefile,v 4.5 1999/01/09 17:39:40 mj Exp $
 #
-#    Makefile for FIDOGATE scripts/filebase/
+#    Makefile for FIDOGATE scripts/run/
 #
 
 #
@@ -16,7 +16,7 @@ include $(TOPDIR)/config.make
 include $(TOPDIR)/rules.make
 
 
-PROGS		= run1 run2 runpoll runffx
+PROGS		= runpoll runpoll-orodruin
 
 
 all:		$(PROGS)
@@ -24,10 +24,7 @@ all:		$(PROGS)
 
 
 install:
-	$(INSTALL_PROG) run1 $(PREFIX)$(BINDIR)
-	$(INSTALL_PROG) run2 $(PREFIX)$(BINDIR)
 	$(INSTALL_PROG) runpoll $(PREFIX)$(BINDIR)
-	$(INSTALL_PROG) runffx $(PREFIX)$(BINDIR)
 
 
 clean:
